Tests: Fixed unit tests. #399
Signed-off-by: Christoph Daniel Schulze <cds@informatik.uni-kiel.de>